<resources>
    <string name="app_name">Legal Alerts</string>

    <string name="fragment_alerts_text_list_item">Alert Item</string>
    <string name="fragment_alerts_text_literal_search">Literal search</string>
    <string name="fragment_alerts_text_not_literal_search">Not literal search</string>
    <string name="fragment_history_text_list_item">Alert Item</string>
    <string name="list_item_history_text_delete">Delete</string>

    <!-- Strings related to FAB Button -->
    <string name="fab_description_alerts">Create new alert</string>
    <string name="fab_description_history">Delete all records</string>

    <!-- Strings related to NavDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_info_email">dgonzalez.BZ@gmail.com</string>
    <string name="nav_header_info_text">Legal bulletins under control</string>
    <string name="nav_alerts">Legal Alerts</string>
    <string name="nav_new_alert">New Alert</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_more">More</string>
    <string name="nav_share">Share App</string>
    <string name="nav_info">About</string>

    <!-- Strings related to ToolBar (ActionBar) -->
    <string name="action_settings">Settings</string>
    <string name="action_manual_sync">Sync</string>

    <!-- Strings related to History fragment -->
    <string name="history_context_menu_title">Modify Record</string>
    <string name="history_context_menu_view">Open PDF&#8230;</string>
    <string name="history_context_menu_delete">Delete</string>

    <!-- Strings related to Alerts fragment -->
    <!-- Strings related to Alerts ListView items ContextMenu -->
    <string name="alerts_context_menu_title">Modify Alert</string>
    <string name="alerts_context_menu_delete">Delete</string>
    <string name="alerts_context_menu_edit">Edit</string>

    <!-- Strings related to Confirmation Dialog -->
    <string name="button_dialog_confirmation_yes">Yes</string>
    <string name="button_dialog_confirmation_no">No</string>
    <string name="title_dialog_confirmation_delete_alert">Confirm delete</string>
    <string name="text_dialog_confirmation_delete_alert">Are you sure you wan´t to delete this alert?</string>

    <!-- Strings related to Alerts Dialog -->
    <string name="button_dialog_alert_save">Save</string>
    <string name="button_dialog_alert_cancel">Cancel</string>
    <string name="text_dialog_new_alert">New Alert</string>
    <string name="text_dialog_edit_alert">Edit Alert</string>
    <string name="text_dialog_literal_search_title"><b>Literal Search</b></string>
    <string name="text_dialog_alert_hint">Alert name</string>
    <string name="text_dialog_default_switch_on">Enabled</string>
    <string name="text_dialog_default_switch_off">Disabled</string>
    <string name="text_dialog_alert_name_invalid">Insert at least three characters!</string>
    <string name="text_dialog_alert_name_too_long">Insert a maximum of 100 characters!</string>
    <string name="text_dialog_error_inserting_or_updating">Alert could not be inserted or updated</string>
    <string name="text_dialog_inserted_or_updated_ok">Alert successfully inserted or updated</string>
    <string name="text_dialog_info_not_literal">Literal search is <b>disabled.</b>\n<i>Legal Alerts will search for all occurrences disregarding order or place.</i></string>
    <string name="text_dialog_info_literal_yes">Literal search is <b>enabled.</b>\n<i>Legal Alerts will search for exact match of given Alert pattern.</i></string>

    <!-- Toast Messages Strings -->
    <string name="text_toast_no_wan">Manual sync failed, no active network was found!.</string>
    <string name="text_toast_service_already_running">service already running&#8230;</string>

    <!-- Strings related notifications messages -->
    <string name="notification_no_results_title">NO RESULTS FOUND</string>
    <string name="notification_no_results_description">Any coincidences where found into XML data.</string>
    <string name="notification_ok_results_title">New alerts found</string>
    <string name="notification_ok_results_description">new coincidences where found for your search terms!.</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Alerts Settings</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_charging_only">Sync only while charging</string>
    <string name="pref_title_sync_unmetered_only">Sync only over unmetered networks</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

</resources>
