<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alerts"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/nav_alerts" />
        <item
            android:id="@+id/nav_add_alert"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/nav_new_alert" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_more">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_info"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/nav_info" />
        </menu>
    </item>

</menu>
