<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/space_8dp"
        android:id="@+id/relativeLayoutDialogAlertName">

        <!-- Dummy view to prevent focus on EditText -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:selectAllOnFocus="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDialogAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editTextDialogAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="100"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:hint="@string/text_dialog_alert_hint"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/textViewDialogAlertName"
                android:layout_toEndOf="@+id/textViewDialogAlertName" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/relativeLayoutDialogAlertName"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/linearLayoutDialogLiteralSearch">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_dialog_literal_search_title"
            android:id="@+id/textViewLiteralSearch"
            android:layout_marginEnd="@dimen/space_16dp"
            android:layout_marginRight="@dimen/space_16dp"
            android:layout_gravity="center_vertical" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchLiteralSearch"
            android:checked="true"
            android:textOff="@string/text_dialog_default_switch_off"
            android:textOn="@string/text_dialog_default_switch_on"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_dialog_info_literal_yes"
        android:id="@+id/textViewLiteralInfo"
        android:layout_below="@+id/linearLayoutDialogLiteralSearch"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/dialog_item_alert_margin" />

</RelativeLayout>